# audio-transcription-diarization

./: .env.example  .gitignore  README.md  Whisper_trytqdm.ipynb  diarize_transcribe.ipynb  pyproject.toml
docs/: cost-estimation.md
notebooks/: 01_test_samples.ipynb  02_metrics_and_review.ipynb
notebooks/legacy/: README.md  check-transcribe.ipynb
plan/: 00-architecture.md  01-track-a-assemblyai.md  02-track-b-custom-pipeline.md  03-repo-modernization.md  04-evaluation-and-comparison.md  05-audio-preprocessing.md  06-testing-and-comparison-notebooks.md  README.md
src/meetings/: __init__.py  align.py  audio.py  cli.py  config.py  io.py  notebook_helpers.py  schema.py  snippets.py  speakers.py
src/meetings/diarize/: __init__.py  base.py  builtin.py  pyannote_local.py  pyannoteai_api.py
src/meetings/pipelines/: __init__.py  assemblyai.py  base.py  custom.py
src/meetings/summarize/: __init__.py  _utils.py  anthropic_batch.py  base.py  claude.py  gemini_batch.py  names.py  prompts.py
src/meetings/transcribe/: __init__.py  base.py  deepgram.py  elevenlabs_scribe.py  openai_gpt4o.py
tests/: test_align.py  test_align_extra.py  test_assemblyai_pipeline.py  test_audio.py  test_cli_transcribe_custom.py  test_custom_pipeline.py  test_custom_pipeline_builtin_diarizer.py  test_custom_summarizer_gemini.py  test_custom_transcribe_only.py  test_elevenlabs_scribe.py  test_notebook_helpers.py  test_relabel_custom.py  test_schema_roundtrip.py  test_summarize_helpers.py
tests/fixtures/: elevenlabs_scribe_v2.json
tests/fixtures/run_dir/: meta.json  speakers.json  transcript.json  transcript.md
