[project]
name = "whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "llvmlite>=0.43.0",
    "numba>=0.60.0",
    "openai-whisper>=20240930",
    "pyannote-audio>=3.3.2",
    "python-dotenv>=1.0.1",
    "torch>=1.2.0",
    "tqdm>=4.67.1",
]
