[project]
name = "meetings"
version = "0.1.0"
description = "Transcribe, diarize and summarize meetings (Dutch-first)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "rich>=13.8",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tenacity>=9.0",
    "pydub>=0.25.1",
    "openai>=1.54",
    "anthropic>=0.39",
    "google-genai>=1.0",
    "assemblyai>=0.63.0",
    "elevenlabs>=1.0",
]

[project.scripts]
meetings = "meetings.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meetings"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ipykernel>=6.29",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks", ".venv", "Audio", "audio", "Transcription"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/meetings"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
